<resources>
    <string name="app_name">Chat Shu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_username">Какой-то пользователь</string>
    <string name="settings_status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+79261828995</string>
    <string name="settings_phone_number_label">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">MyLogin</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О Себе</string>
    <string name="settings_label_bio">Напишите о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_input_code_we_send">Мы выслали SMS с кодом проверки на ваш телефон</string>
    <string name="register_input_code_text">Введите код</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_enter_correct_number">Введите корректный номер</string>
    <string name="settings_hint_name">Имя</string>
    <string name="settings_hint_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_udated">Данные обновлены</string>
    <string name="settings_hint_username">username</string>
    <string name="settings_hint_bio">О себе</string>
    <string name="error_message_is_empty">Сообщение не может быть пустым</string>
    <string name="chat_input_message_hint">Введите текст...</string>
    <string name="single_chat_clearChat">Очистить чат</string>
    <string name="single_chat_deleteChat">Удалить чат</string>
</resources>