<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_bloc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_photo_width"
            android:layout_height="@dimen/settings_photo_height"
            android:src="@drawable/ic_default_user"
            app:civ_border_color="#FF000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/app_margin"/>
        <TextView
            android:id="@+id/settings_fullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/app_margin"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorAccent"
            tools:text="@string/settings_username"/>
        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/settings_fullName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/app_margin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_text"
            tools:text="@string/settings_status"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_header_bloc"
        android:layout_marginTop="@dimen/vertical_margin_large"
        android:layout_marginStart="@dimen/app_margin"
        android:text="@string/settings_text_account"
        android:textColor="@color/primary"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_text_phone_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/settings_default_number"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_text_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_text_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_phone_number_label"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_text_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_text_userName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/settings_default_login"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_text_label_userName"
            app:layout_constraintTop_toBottomOf="@id/settings_text_userName"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_label_login"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_text_label_userName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_text_bio"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/settings_default_bio"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_text_label_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_text_bio"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_label_bio"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_text_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_btn_change_photo"
        android:layout_width="@dimen/settings_change_photo_width"
        android:layout_height="@dimen/settings_change_photo_height"
        android:src="@drawable/ic_camera"
        app:civ_border_color="#FF000000"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_bloc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_bloc"
        android:layout_marginEnd="@dimen/app_margin"
        app:civ_circle_background_color="@color/accent"/>





</androidx.constraintlayout.widget.ConstraintLayout>